src/App.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	font-family: 'Montserrat', sans-serif;
	background-color: #68bb23;
}

/* Landing Page */

.landing-container {
	width: 100%;
}

/* Head Section */

.title-wrapper {
	display: flex;
	justify-content: center;
	margin-top: 25px;
	margin-bottom: 50px;
}

.title-image {
	width: 350px;
}

.hero-wrapper {
	width: 100%;
}

.hero-img {
	width: 100%;
}

/* Team Section */

.team-wrapper {
	padding: 50px 0;
	text-align: center;
	background-color: #feca00;
}

.team-title {
	text-transform: uppercase;
	font-size: 2rem;
	color: #4c9730;
}

.team-member {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
	font-weight: bold;
	font-size: 1.25rem;
	text-transform: uppercase;
	color: #4c9730;
}

.team-member img {
	height: 200px;
	margin: 25px 35px 10px 35px;
}

/* Bottom Section */

.bottom-wrapper {
	padding: 50px 50px 0 50px;
	display: flex;
	margin-bottom: 50px;
}

.screenshot-wrapper {
	width: 50%;
}

.screenshot img {
	width: 700px;
}

.summary-wrapper {
	width: 50%;
}

.summary-content {
	padding: 20px;
	background-color: #feca00;
	text-align: justify;
	color: #710ef1;
	border: 2px solid black;
	height: 400px;
	font-size: 1.25rem;
}

/* Demo Button */

.demo-wrapper {
	display: flex;
	justify-content: center;
	padding-bottom: 50px;
}

.demo {
	color: #fff;
	font-weight: bold;
	font-size: 2rem;
	text-transform: uppercase;
	letter-spacing: 1.5px;
	text-decoration: none;
	background: #feca00;
	color: #4c9730;
	padding: 20px;
	border-radius: 5px;
	display: inline-block;
	border: none;
	transition: all 0.4s ease 0s;
	cursor: pointer;
}

.demo:hover {
	background: #8226fa;
	color: #4c9730;
	letter-spacing: 1px;
	box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
	transition: all 0.4s ease 0s;
}

/* Piano Page */

.pianoPage {
	align-items: center;
}

.button-wrapper,
.voice-wrapper {
	display: flex;
	justify-content: center;
	margin-top: 10px;
}

.song-button,
.voice-button {
	margin: 40px 20px;
	background-color: #fff;
	border-radius: 10px;
	cursor: pointer;
}

.song-button img,
.voice-button img {
	height: 100px;
}

.piano-wrapper {
	display: flex;
	justify-content: center;
	margin-top: 10px;
}

.piano {
	display: flex;
	justify-content: center;
	max-width: 65%;
}

.white {
	border: 1px solid #000000;
	border-radius: 0 0 10px 10px;
	background-color: white;
	width: 100px;
	height: 250px;
	box-shadow: 0px 3px 5px #666;
}

.white.C4:active {
	background-color: #28ff00;
}
.white.D4:active {
	background-color: #007cff;
}
.white.E4:active {
	background-color: #4500ea;
}
.white.F4:active {
	background-color: #57009e;
}
.white.G4:active {
	background-color: #b30000;
}
.white.A4:active {
	background-color: #ff6300;
}
.white.B4:active {
	background-color: #99ff00;
}
.white.C5:active {
	background-color: #52ff33;
}
.white.D5:active {
	background-color: #3396ff;
}
.white.E5:active {
	background-color: #5e1aff;
}
.white.F5:active {
	background-color: #7000cc;
}
.white.G5:active {
	background-color: #e60000;
}
.white.A5:active {
	background-color: #ff8133;
}
.white.B5:active {
	background-color: #adff33;
}
.white.C6:active {
	background-color: #7dff66;
}

.black {
	border-radius: 0 0 7px 7px;
	background-color: black;
	width: 60px;
	height: 147px;
	box-shadow: 0px 3px 5px #666;
	margin-left: -26.5px;
	margin-right: -26.5px;
	z-index: 1;
}

.black.Db4:active {
	background-color: #00ffe8;
}
.black.Eb4:active {
	background-color: #0500ff;
}
.black.Gb4:active {
	background-color: #740000;
}
.black.Ab4:active {
	background-color: #ee0000;
}
.black.Bb4:active {
	background-color: #ffec00;
}
.black.Db5:active {
	background-color: #33ffee;
}
.black.Eb5:active {
	background-color: #3633ff;
}
.black.Gb5:active {
	background-color: #b30000;
}
.black.Ab5:active {
	background-color: #ff1a1a;
}
.black.Bb5:active {
	background-color: #fff133;
}

